--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="  dark:bg-gray-900 dark:text-gray-200 bg-gray-100 text-gray-800">
   <app-root></app-root>
 </body>
 </html>
